importvpc.tf
# resource "aws_vpc""imp"{
#     instance_tenancy = "default"
#     cidr_block = "172.16.0.0/16"
#     tags = {
#         Name = "vpc-console"
#     }
# }
